--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
 }
 
 .portada{
+  z-index: 1;
   height: 90vh;
   background-image: url('/src/assets/portada2.jpg');
   background-size: cover;
@@ -276,6 +277,7 @@
     font-family: Archivo;
   }
   
+
   .section3{
     flex-wrap: wrap;
   }
